--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -330,6 +330,8 @@
     <Compile Include="Areas\Inventory\Models\RelatedCasesModel.cs" />
     <Compile Include="Areas\Inventory\Models\RelatedCasesModels\ServerRelatedCasesModel.cs" />
     <Compile Include="Areas\WebApi\Controllers\CaseApiController.cs" />
+    <Compile Include="Components\Contracts\ContractHistoryFormatter.cs" />
+    <Compile Include="Components\Contracts\ContractHistoryMarkupBuilder.cs" />
     <Compile Include="Controllers\CaseDocumentController.cs" />
     <Compile Include="Controllers\QuestionnaireAnswerController.cs" />
     <Compile Include="Enums\ReportItemNames.cs" />
@@ -360,6 +362,7 @@
     <Compile Include="Models\Case\CaseMoveModel.cs" />
     <Compile Include="Models\Case\CaseOperationResult.cs" />
     <Compile Include="Models\Case\InvoiceTimeModel.cs" />
+    <Compile Include="Models\Contract\ContractHistoryFieldsDiff.cs" />
     <Compile Include="Models\Gdpr\DataPrivacyHistoryViewModel.cs" />
     <Compile Include="Models\Gdpr\GdprOperationsHistoryListItem.cs" />
     <Compile Include="Models\JsonModels\Base\BaseJsonModel.cs" />
@@ -4020,6 +4023,7 @@
     <Content Include="Views\QuestionnaireAnswer\Quiestionnaire.cshtml" />
     <Content Include="Views\Cases\ModalDialogs\_ExtraEmails.cshtml" />
     <Content Include="Views\Cases\CaseOperationResult.cshtml" />
+    <Content Include="Views\Contracts\ContractHistory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config">
