--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -258,7 +258,7 @@
     <Compile Include="Models\CaseOverviewGridColumnSetting.cs" />
     <Compile Include="Models\Contract\ContractFileModel.cs" />
     <Compile Include="Models\Contract\ContractHistoryFull.cs" />
-    <Compile Include="Models\Contract\ContractSelectedFilter.cs" />
+    <Compile Include="Models\Contract\ContractsSearchFilter.cs" />
     <Compile Include="Models\Contract\ContractsSettingRowModel.cs" />
     <Compile Include="Models\Contract\ContractInputModel.cs" />
     <Compile Include="Models\Contract\FieldDifference.cs" />
