[ADD]#55692 - Contract module - Overview filter option. Filter saving.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -4027,6 +4027,8 @@
     <Content Include="Views\Cases\ModalDialogs\_ExtraEmails.cshtml" />
     <Content Include="Views\Cases\CaseOperationResult.cshtml" />
     <Content Include="Views\Contracts\ContractHistory.cshtml" />
+    <Content Include="Views\Contracts\_ContractsSearchSummary.cshtml" />
+    <Content Include="Views\Contracts\_ContractsSearchFilter.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config">
