[ADD] #61955 - Contract module - Link to case from overview

--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Collections\INamedObject.cs" />
     <Compile Include="Collections\NamedObjectCollection.cs" />
     <Compile Include="Configuration\AppConfigHelper.cs" />
+    <Compile Include="Constants\CaseSearchConstants.cs" />
     <Compile Include="Constants\CaseSections.cs" />
     <Compile Include="Constants\Shared.cs" />
     <Compile Include="Constants\DataTypeValue.cs" />
