--- a/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/log4net.config
+++ b/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/log4net.config
@@ -15,6 +15,7 @@
       <levelMin value="ERROR" />
     </filter>
   </appender>
+  
   <appender name="LogToInfoFile" type="log4net.Appender.RollingFileAppender">
     <param name="File" value="logs\\TaskScheduler_Info_" />
     <!-- Example using environment variables in params -->
@@ -31,11 +32,24 @@
       <levelMax value="WARN" />
     </filter>
   </appender>
+  
+  <appender name="DataPrivacyFileAppender" type="log4net.Appender.RollingFileAppender">
+    <param name="File" value="logs\\DataPrivacy_" />
+    <param name="RollingStyle" value="Date" />
+    <param name="DatePattern" value="yyyy.MM.dd.\lo\g" />
+    <param name="StaticLogFileName" value="false" />
+    <param name="AppendToFile" value="true" />
+    <layout type="log4net.Layout.PatternLayout">
+      <param name="ConversionPattern" value="%d [%t] %-2p %c [%x] - %m%n" />
+    </layout>
+  </appender>
+  
   <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%d [%t] %-5p %l - %m%n" />
     </layout>
   </appender>
+  
   <root>
     <level value="ALL" />
     <!-- use INFO value for production-->
@@ -48,4 +62,10 @@
     <!-- uncomment to enable event log appending -->
     <!-- <appender-ref ref="EventLogAppender" /> -->
   </root>
+  
+  <logger name="DataPrivacyLogger">
+    <level value="DEBUG" />
+    <appender-ref ref="DataPrivacyFileAppender" />
+  </logger>
+  
 </log4net>
