--- a/dhHelpdeskNG/DH.Helpdesk.TestConsole/DH.Helpdesk.TestConsole.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.TestConsole/DH.Helpdesk.TestConsole.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DH.Helpdesk.TestConsole</RootNamespace>
     <AssemblyName>DH.Helpdesk.TestConsole</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
