#62677: Predefine Search possibilities. Case settings page. #62678: Predefine Search possibilities. Template settings.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -370,6 +370,7 @@
     <Compile Include="Models\CaseSolution\CaseSolutionSettingsFieldModel.cs" />
     <Compile Include="Models\Case\CaseMoveModel.cs" />
     <Compile Include="Models\Case\CaseOperationResult.cs" />
+    <Compile Include="Models\Case\CaseSectionInputData.cs" />
     <Compile Include="Models\Case\InvoiceTimeModel.cs" />
     <Compile Include="Models\Contract\ContractHistoryFieldsDiff.cs" />
     <Compile Include="Models\Contract\ContractsSearchInputData.cs" />
