--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -379,6 +379,7 @@
     <Compile Include="Models\Gdpr\GdprOperationsHistoryListItem.cs" />
     <Compile Include="Models\JsonModels\Base\BaseJsonModel.cs" />
     <Compile Include="Models\JsonModels\Case\CaseJsonModel.cs" />
+    <Compile Include="Models\Notifiers\UserCategoryInputData.cs" />
     <Compile Include="Models\Shared\ChangePasswordModel.cs" />
     <Compile Include="Models\Questionnaire\Input\QuestionnaireAnswerParams.cs" />
     <Compile Include="Models\Notifiers\ComputerUserCategoryModel.cs" />
@@ -4041,6 +4042,9 @@
     <Content Include="Views\Contracts\_ContractsSearchFilter.cshtml" />
     <Content Include="Views\Contracts\_ContractCases.cshtml" />
     <Content Include="Views\Shared\_ChangePassword.cshtml" />
+    <Content Include="Views\Notifiers\UserCategories.cshtml" />
+    <Content Include="Views\Notifiers\EditUserCategory.cshtml" />
+    <Content Include="Views\Notifiers\_CategoryInput.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config">
