[UPD] #62182  Save original MessageID for identification.

--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket.Library/DH.Helpdesk.Mail2Ticket.Library.vbproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket.Library/DH.Helpdesk.Mail2Ticket.Library.vbproj
@@ -108,6 +108,7 @@
     <Compile Include="Log\Log.vb" />
     <Compile Include="Log\LogData.vb" />
     <Compile Include="Mail2Ticket\Mail2TicketData.vb" />
+    <Compile Include="Mail2Ticket\Mail2TicketEntity.vb" />
     <Compile Include="MailTemplate\MailTemplate.vb" />
     <Compile Include="MailTemplate\MailTemplateData.vb" />
     <Compile Include="Mail\Mail.vb" />
