[ADD] #62584 - Web.config update

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -90,8 +90,9 @@
     <add key="DefaultEmployeeNumber" value="13106668" />
     <add key="ConfirmMsgAfterCaseRegistration" value="true" />
     <add key="CaseList" value="coworkers" />
-    <add key="CurrentApplication" value="LineManager" />
     <!-- "SelfService", "LineManager" -->
+    <add key="CurrentApplication" value="LineManager" />
+    <!-- add key="ShowCommunicationForSelfService" value="true" -->
     <!-- Single Sign Keys-->
     <add key="ApplicationId" value="Line Manager" />
     <add key="ClaimDomain" value="DomainName" />
